# FRIES

./: .gitignore  .travis.yml  CMakeLists.txt  Doxyfile  README.md  annotated.html  argparse_8h.html  argparse_8hpp_source.html  autotoc_md0.html  class_adder.html  class_dist_vec.html  class_four_d_arr.html  class_hash_table.html  class_hub_hol_vec.html  class_matrix.html  class_matrix_1_1_row_reference.html  class_matrix_3_01bool_01_4.html  class_matrix_3_01bool_01_4_1_1_row_reference.html  class_symm_e_r_is.html  classargparse_1_1_args.html  classes.html  cnpy_8h_source.html  compress__utils_8cpp.html  compress__utils_8h.html  compress__utils_8hpp.html  compress__utils_8hpp_source.html  det__hash_8hpp_source.html  det__store_8c.html  det__store_8h.html  det__store_8h_source.html  dice__dots_8cpp.html  dir_1995f4577d3924f3709cc2d942fa50ed.html  dir_607347b14e208e050cf2976c6f5bb11f.html  dir_881573b67d992baba3d2ba4317bef69e.html  dir_95f1fbc490b2b4d3ff967bb8ea85db41.html  dir_e4d6308595d44bbb3976ab63354f0f62.html  fci__utils_8c.html  fci__utils_8h.html  fci__utils_8h_source.html  fciqmc__fp__mol_8cpp.html  (+91 more)
.ci/: generateDocumentation.sh  setup-ssh.sh  travis_deploy_key.enc
Attic/: subsp_mol2.cpp
Benchmarks/: Results.tex  calc_stats.py
FRIES/: CMakeLists.txt  compress_utils.c  compress_utils.cpp  compress_utils.h  compress_utils.hpp  det_hash.hpp  det_store.c  det_store.h  fci_utils.c  fci_utils.h  hh_vec.hpp  io_utils.c  io_utils.cpp  io_utils.h  io_utils.hpp  math_utils.c  math_utils.h  mpi_switch.h  ndarr.cpp  ndarr.hpp  vec_utils.c  vec_utils.cpp  vec_utils.h  vec_utils.hpp
FRIES/Ext_Libs/: CMakeLists.txt  argparse.hpp  heap.c  heap.h
FRIES/Ext_Libs/cnpy/: CMakeLists.txt  cnpy.cpp  cnpy.h
FRIES/Ext_Libs/dcmt/: CMakeLists.txt  dc.h  eqdeg.c  prescr.c
FRIES/Hamiltonians/: CMakeLists.txt  heat_bathPP.c  heat_bathPP.cpp  heat_bathPP.h  heat_bathPP.hpp  hub_holstein.c  hub_holstein.cpp  hub_holstein.h  hub_holstein.hpp  molecule.c  molecule.cpp  molecule.h  molecule.hpp  near_uniform.c  near_uniform.cpp  near_uniform.h  near_uniform.hpp
FRIES_bin/: CMakeLists.txt  arnoldi_mol.cpp  dice_dots.cpp  fciqmc.c  fciqmc_fp_mol.cpp  fciqmc_hh.c  fciqmc_hh.cpp  fciqmc_mol.c  fciqmc_mol.cpp  frifull_hh.cpp  frifull_mol.cpp  frimulti_mol.c  frimulti_mol.cpp  frisys_hh.c  frisys_hh.cpp  frisys_mol.c  frisys_mol.cpp  obs_repl_mol.cpp  observables_mol.cpp  subsp_mol.cpp  subsp_mol_lowmem.cpp  subspfull_mol.cpp  symm_arnoldi_mol.cpp
FRIes/: CMakeLists.txt  Makefile  compress_utils.c  compress_utils.h  csvparser.h  dc.h  det_store.c  det_store.h  fci_utils.c  fci_utils.h  fciqmc.c  fri.c  fri_s.c  fri_sys.c  heap.h  heat_bathPP.c  heat_bathPP.h  hh_qmc.c  hier_comp_ex.c  hier_comp_ex2.c  hub_holstein.c  hub_holstein.h  io_utils.c  io_utils.h  main.c  math_utils.c  math_utils.h  mpi_switch.h  near_uniform.c  near_uniform.h  vec_utils.c  vec_utils.h
FRIes.xcodeproj/: project.pbxproj
FRIes/Ext_Libs/: CMakeLists.txt  csvparser.c  csvparser.h  heap.c  heap.h
FRIes/Ext_Libs/dcmt/: CMakeLists.txt  dc.h
FRIes/FRIes/: CMakeLists.txt  compress_utils.c  compress_utils.h  det_store.h  fci_utils.c  fci_utils.h  io_utils.c  io_utils.h  math_utils.c  math_utils.h  mpi_switch.h  vec_utils.c  vec_utils.h
FRIes/FRIes/Ext_Libs/: CMakeLists.txt  argparse.c  argparse.h  dc.h  heap.h
FRIes/FRIes/Ext_Libs/dcmt/: CMakeLists.txt  check32.c
FRIes/FRIes/Hamiltonians/: heat_bathPP.c  heat_bathPP.h  hub_holstein.c  hub_holstein.h  molecule.c  molecule.h  near_uniform.c  near_uniform.h
FRIes/FRIes_bin/: CMakeLists.txt  fciqmc.c  fri.c  fri_sys.c  hh_qmc.c  hh_sys.c
FRIes/Hamiltonians/: heat_bathPP.c  hub_holstein.h  molecule.c  molecule.h  near_uniform.h
FRIes/Tests/: hh_det.c  hier_comp_ex2.c
FRIes_bin/: CMakeLists.txt  fciqmc.c  fri_sys.c  hh_sys.c
Input_Data/: gen_ex_trials.py
LAPACK/: CMakeLists.txt  lapack_wrappers.cpp  lapack_wrappers.hpp  lapacke.h
N2_eqm/: cisd_dets.txt  fri_dets  fri_vals  hcore.npy  hcore.txt  hf_en.txt  qmc_vals  qmc_vals00  symm.npy  sys_params.txt
N2_load/: S.txt  dense.txt
N2_res/: all_hash.txt  dense.txt  hash0.txt  hash1.txt  hash2.txt  hash3.txt  hash4.txt  hash5.txt  hash6.txt  hash7.txt  params.txt
N2_str/: cisd_dets.txt  cisd_vals.txt  fri_dets  hf_en.txt  qmc500k_dets  qmc500k_vals  symm.txt  sys_params.txt
Tests/: hh_det.c  hier_comp_ex.c  hier_comp_ex2.c
doc/: Doxyfile
docs/: Doxyfile  argparse_8h_source.html  classes.html  compress__utils_8h_source.html  csvparser_8h_source.html  dir_06abdf42ca127d27de0171ac7b753ac2.html  fci__utils_8h_source.html  fciqmc_8c.html  fciqmc__hh_8c.html  fciqmc__mol_8c.html  functions.html  globals.html  hh__sys_8c.html  hub__holstein_8c.html  hub__holstein_8h.html  hub__holstein_8h_source.html  io__utils_8h.html  mainpage.dox  molecule_8c.html  near__uniform_8c.html  near__uniform_8h_source.html  running.dox  running.html  struct___o_r_g___s_t_a_t_e.html  struct_csv_parser.html  struct_vector.html  structhash__entry.html  structstack__s.html  vec__utils_8c.html  vec__utils_8h_source.html
examples/: CMakeLists.txt  compress_1D.c  fries_test.cpp  hubbard_params.txt  run_hubbard.sh  run_neon.sh
examples/Neon_augccpdvz_HF/: fri_dets00  fri_vals00  symm.txt  sys_params.txt
search/: all_1.js  all_10.js  all_12.js  all_13.js  all_2.js  all_5.js  all_8.js  all_9.js  all_a.js  all_c.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_9.js  classes_b.js  defines_0.js  files_6.js  files_7.js  functions_0.js  functions_1.js  functions_4.js  functions_8.js  functions_a.js  functions_b.js  functions_c.js  functions_d.js  pages_0.js  variables_0.js  variables_1.js  variables_5.js  variables_8.js  variables_a.js  variables_b.js  variables_d.js  variables_e.js  variables_f.js
tests/: CMakeLists.txt  alias.txt  catch.hpp  clara.hpp  hh_det.c  hier_comp_ex.c  hier_comp_ex2.c  inputs.hpp  test_bitstrings.cpp  test_compression.cpp  test_hamiltonian.cpp  test_linalg.cpp  test_matrix.cpp  test_vector.cpp  unit_tests.cpp
tests/clt/: CMakeLists.txt  main.cpp  sampler.hpp
(+174 files in other folders)
